//file:noinspection GroovyAssignabilityCheck
plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://api.modrinth.com/maven" }
}

loom {
    splitEnvironmentSourceSets()
    accessWidenerPath = file("src/main/resources/neatly-better.accesswidener")
    mods {
        "neatly-better" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }

    runs {
        client {
            client()
            vmArgs(
                    "--enable-native-access=ALL-UNNAMED",
                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
                    "--add-opens=java.base/java.nio=ALL-UNNAMED",
                    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
            )
        }
        server {
            server()
            vmArgs(
                    "--enable-native-access=ALL-UNNAMED",
                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
                    "--add-opens=java.base/java.nio=ALL-UNNAMED",
                    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
            )
        }
    }
}


dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    // Fabric
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // Integrations
    compileOnly "maven.modrinth:elytra-trims:${project.elytratrims_version}"

    //  Config
    api "maven.modrinth:modmenu:${project.modmenu_version}"
    implementation "maven.modrinth:forge-config-api-port:${project.forgeconfigapiport_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    repositories {}
}
